--- a/run/appserver/config.cfg
+++ b/run/appserver/config.cfg
@@ -1,14 +1,13 @@
-#Mon Dec 19 18:17:48 CET 2011
-app_config_prefix=config_
+#Tue Sep 30 14:47:47 CEST 2014
 apps_resource_id=apps
+app_config_prefix=config_
 app_config_path=appserver/apps/
 javascript_suffix=.js
 app_path=appserver/installed/
-install_resource_id=install
 app_config_suffix=.cfg
+install_resource_id=install
 config_resource_id=config
-config_identifier=config
-app_config_resources=appconfigs
+app_config_resources=instances
 running_resource_id=running
 stats_resource_id=stats
-start_on_install=true
+start_on_install=false
