--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.eclipse.californium</groupId>
 	<artifactId>actinium</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>1.0.0-M1</version>
 	<packaging>jar</packaging>
 
 	<name>Actinium (Ac)</name>
@@ -91,7 +91,7 @@
     	<dependency>
             <groupId>org.eclipse.californium</groupId>
             <artifactId>californium-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-M1</version>
     	</dependency>
 		<dependency>
 			<groupId>org.mozilla</groupId>
@@ -170,6 +170,19 @@
 							</artifactItems>
 							<outputDirectory>./run/</outputDirectory>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
