--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.eclipse.californium</groupId>
 	<artifactId>actinium</artifactId>
-	<version>1.0.0-M1</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Actinium (Ac)</name>
@@ -91,7 +91,7 @@
     	<dependency>
             <groupId>org.eclipse.californium</groupId>
             <artifactId>californium-core</artifactId>
-            <version>1.0.0-M1</version>
+            <version>1.0.0-SNAPSHOT</version>
     	</dependency>
 		<dependency>
 			<groupId>org.mozilla</groupId>
