--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 			<name>mkovatsc-github</name>
 			<url>https://github.com/mkovatsc/maven/raw/master/thirdparty/</url>
 		</repository>
-  	</repositories>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -88,11 +88,11 @@
 			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
-    	<dependency>
-            <groupId>org.eclipse.californium</groupId>
-            <artifactId>californium-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-    	</dependency>
+		<dependency>
+			<groupId>org.eclipse.californium</groupId>
+			<artifactId>californium-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mozilla</groupId>
 			<artifactId>rhino</artifactId>
