--- a/run/appserver/apps/config_timer.cfg
+++ b/run/appserver/apps/config_timer.cfg
@@ -1,5 +1,5 @@
-#Sat May 12 02:48:12 CEST 2012
-start_on_startup=fase
+#Thu Sep 10 14:38:50 CEST 2015
+start_on_startup=true
 name=timer
 app=timer
 allow_error_output=true
