--- a/pom.xml
+++ b/pom.xml
@@ -4,140 +4,29 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.javaVersion>1.7</project.build.javaVersion>
-	</properties>
 
-	<groupId>org.eclipse.californium</groupId>
+	<parent>
+		<groupId>org.eclipse.californium</groupId>
+		<artifactId>parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+	
 	<artifactId>actinium</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Actinium (Ac)</name>
 	<description>Actinium (Ac) App-server for Californium</description>
-	<url>https://www.eclipse.org/californium/</url>
-	<organization>
-		<name>Eclipse Foundation</name>
-		<url>http://www.eclipse.org/</url>
-	</organization>
-	<licenses>
-		<license>
-			<name>Eclipse Public License - Version 1.0</name>
-			<url>http://www.eclipse.org/org/documents/epl-v10.php</url>
-		</license>
-		<license>
-			<name>Eclipse Distribution License - Version 1.0</name>
-			<url>http://www.eclipse.org/org/documents/edl-v10.php</url>
-		</license>
-	</licenses>
-    <scm>
-        <developerConnection>scm:git:ssh://git@github.com/eclipse/californium.actinium.git</developerConnection>
-        <url>https://github.com/eclipse/californium.actinium</url>
-        <tag>HEAD</tag>
-    </scm>
-	<developers>
-		<developer>
-			<id>mkovatsch</id>
-			<name>Matthias Kovatsch</name>
-			<email>kovatsch@inf.ethz.ch</email>
-			<url>http://people.inf.ethz.ch/mkovatsc/</url>
-			<organization>ETH Zurich</organization>
-			<organizationUrl>http://www.vs.inf.ethz.ch/</organizationUrl>
-			<roles>
-				<role>Committer</role>
-				<role>Lead</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>mlanter</id>
-			<name>Martin Lanter</name>
-			<email>martin.lanter@gmx.ch</email>
-			<roles>
-				<role>Committer</role>
-			</roles>
-		</developer>
-	</developers>
-
-	<distributionManagement>
-		<repository>
-			<id>repo.eclipse.org</id>
-			<name>Californium Repository - Releases</name>
-			<url>https://repo.eclipse.org/content/repositories/californium-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>repo.eclipse.org</id>
-			<name>Californium Repository - Snapshots</name>
-			<url>https://repo.eclipse.org/content/repositories/californium-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
-	
-	<profiles>
-		<profile>
-			<!-- this profile generate all the needed artifact and signatures needed for releasing on maven central -->
-			<id>release</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<distributionManagement>
-				<repository>
-					<id>ossrh</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-				</repository>
-			</distributionManagement>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
-						<executions>
-							<execution>
-								<id>attach-javadocs</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<version>2.2.1</version>
-						<executions>
-							<execution>
-								<id>attach-sources</id>
-								<goals>
-									<goal>jar-no-fork</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<scm>
+		<developerConnection>scm:git:ssh://git@github.com/eclipse/californium.tools.git</developerConnection>
+		<url>https://github.com/eclipse/californium.tools</url>
+		<tag>HEAD</tag>
+	</scm>
 
 	<repositories>
 		<repository>
-			<id>repo.eclipse.org</id>
-			<name>Californium Repository</name>
-			<url>https://repo.eclipse.org/content/repositories/californium/</url>
+			<id>eclipse_snapshots</id>
+			<name>Eclipse Snapshots</name>
+			<url>https://repo.eclipse.org/content/repositories/snapshots/</url>
 		</repository>
 		<repository>
 			<id>mkovatsc-github-thirdparty</id>
@@ -150,7 +39,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -175,7 +63,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
 				<configuration>
 					<source>${project.build.javaVersion}</source>
 					<target>${project.build.javaVersion}</target>
@@ -241,7 +128,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -269,5 +155,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
