Implement require function

--- a/run/appserver/config.cfg
+++ b/run/appserver/config.cfg
@@ -2,6 +2,7 @@
 apps_resource_id=apps
 app_config_prefix=config_
 app_config_path=appserver/apps/
+app_libs_path=appserver/libs/
 javascript_suffix=.js
 app_path=appserver/installed/
 app_config_suffix=.cfg
