--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.20.0-GA</version>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.californium</groupId>
 			<artifactId>californium-core</artifactId>
 			<version>${project.version}</version>
