--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
 		<dependency>
 			<groupId>org.eclipse.californium</groupId>
 			<artifactId>californium-core</artifactId>
-			<version>1.0.1</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.uk</groupId>
@@ -198,19 +198,21 @@
 				<!-- nothing here -->
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.1.0</version>
+				<inherited>true</inherited>
 				<configuration>
 					<appendAssemblyId>false</appendAssemblyId>
+					<attach>false</attach>
 					<archive>
 						<manifest>
-							<addClasspath>true</addClasspath>
 							<mainClass>org.eclipse.californium.actinium.AcServer</mainClass>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
 					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
+					<descriptors>
+						<descriptor>enhanced-jar-with-dependencies.xml</descriptor>
+					</descriptors>
 				</configuration>
 				<executions>
 					<execution>
