--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.javaVersion>1.8</project.build.javaVersion>
+		<californium.version>2.0.0-SNAPSHOT</californium.version>
+		<junit.version>4.12</junit.version>
 	</properties>
 
 	<groupId>org.eclipse.californium</groupId>
@@ -31,11 +33,11 @@
 			<url>http://www.eclipse.org/org/documents/edl-v10.php</url>
 		</license>
 	</licenses>
-    <scm>
-        <developerConnection>scm:git:ssh://git@github.com/eclipse/californium.actinium.git</developerConnection>
-        <url>https://github.com/eclipse/californium.actinium</url>
-        <tag>HEAD</tag>
-    </scm>
+	<scm>
+		<developerConnection>scm:git:ssh://git@github.com/eclipse/californium.actinium.git</developerConnection>
+		<url>https://github.com/eclipse/californium.actinium</url>
+		<tag>HEAD</tag>
+	</scm>
 	<developers>
 		<developer>
 			<id>mkovatsch</id>
@@ -79,7 +81,7 @@
 			<url>https://repo.eclipse.org/content/repositories/californium-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
-	
+
 	<profiles>
 		<profile>
 			<!-- this profile generate all the needed artifact and signatures needed for releasing on maven central -->
@@ -158,7 +160,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -169,7 +171,7 @@
 		<dependency>
 			<groupId>org.eclipse.californium</groupId>
 			<artifactId>californium-core</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>${californium.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.uk</groupId>
@@ -260,6 +262,16 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<excludes>
+						<exclude>**/*$*</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<!-- execution -->
 			<plugin>
