Use test scope for element connector tests jar dependency
Signed-off-by: Kai Hudalla <kai.hudalla@bosch-si.com>

--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,7 @@
 					<version>${californium.version}</version>
 					<classifier>tests</classifier>
 					<type>test-jar</type>
+					<scope>test</scope>
 				</dependency>
 			</dependencies>
 		</profile>
