--- a/pom.xml
+++ b/pom.xml
@@ -5,33 +5,27 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.eclipse.californium</groupId>
+	<parent>
+			<groupId>org.eclipse.californium</groupId>
+			<artifactId>parent</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+	</parent>
+
 	<artifactId>actinium</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Actinium (Ac)</name>
 	<description>Actinium (Ac) App-server for Californium</description>
 	<url>https://www.eclipse.org/californium/</url>
-	<organization>
-		<name>Eclipse Foundation</name>
-		<url>http://www.eclipse.org/</url>
-	</organization>
-	<licenses>
-		<license>
-			<name>Eclipse Public License - Version 2.0</name>
-			<url>https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.txt</url>
-		</license>
-		<license>
-			<name>Eclipse Distribution License - Version 1.0</name>
-			<url>https://www.eclipse.org/org/documents/epl-1.0/EPL-1.0.txt</url>
-		</license>
-	</licenses>
 	<scm>
 		<developerConnection>scm:git:ssh://git@github.com/eclipse/californium.actinium.git</developerConnection>
 		<url>https://github.com/eclipse/californium.actinium</url>
 		<tag>HEAD</tag>
 	</scm>
+	<issueManagement>
+			<system>GitHub</system>
+			<url>https://github.com/eclipse/californium.actinium/issues</url>
+	</issueManagement>
 	<developers>
 		<developer>
 			<id>mkovatsch</id>
@@ -63,63 +57,29 @@
 		</developer>
 	</developers>
 
-	<distributionManagement>
-		<repository>
-			<id>repo.eclipse.org</id>
-			<name>Californium Repository - Releases</name>
-			<url>https://repo.eclipse.org/content/repositories/californium-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>repo.eclipse.org</id>
-			<name>Californium Repository - Snapshots</name>
-			<url>https://repo.eclipse.org/content/repositories/californium-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
-
-	<repositories>
-		<repository>
-			<id>repo.eclipse.org</id>
-			<name>Californium Repository</name>
-			<url>https://repo.eclipse.org/content/repositories/californium/</url>
-		</repository>
-		<repository>
-			<id>mkovatsc-github-thirdparty</id>
-			<name>mkovatsc-github</name>
-			<url>https://github.com/mkovatsc/maven/raw/master/thirdparty/</url>
-		</repository>
-	</repositories>
-
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.javaVersion>1.8</project.build.javaVersion>
-		<californium.version>2.0.0-SNAPSHOT</californium.version>
-		<junit.version>4.12</junit.version>
-		<logback.version>1.2.3</logback.version>
+		<assembly.mainClass>org.eclipse.californium.actinium.AcServer</assembly.mainClass>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.20.0-GA</version>
+			<version>3.22.0-GA</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>californium-core</artifactId>
-			<version>${californium.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<!-- runtime dependencies -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<scope>runtime</scope>
-			<version>${logback.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -127,47 +87,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>${project.build.javaVersion}</source>
-					<target>${project.build.javaVersion}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-			<!-- JAR packaging -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.1</version>
-				<!-- nothing here -->
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<inherited>true</inherited>
-				<configuration>
-					<appendAssemblyId>false</appendAssemblyId>
-					<attach>false</attach>
-					<archive>
-						<manifest>
-							<mainClass>org.eclipse.californium.actinium.AcServer</mainClass>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-						</manifest>
-					</archive>
-					<descriptors>
-						<descriptor>enhanced-jar-with-dependencies.xml</descriptor>
-					</descriptors>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -194,29 +114,9 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
-					<systemPropertyVariables>
-						<!--
-							configures the logback logging framework to use a config file
-						-->
-						<logback.configurationFile>${project.basedir}/logback-test.xml</logback.configurationFile>
-					</systemPropertyVariables>
 					<excludes>
 						<exclude>**/*$*</exclude>
 					</excludes>
@@ -238,11 +138,6 @@
 					<mainClass>org.eclipse.californium.actinium.AcServer</mainClass>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>license-maven-plugin</artifactId>
-				<version>1.16</version>
-			</plugin>
 		</plugins>
 	</build>
 
@@ -262,44 +157,11 @@
 				<dependency>
 					<groupId>${project.groupId}</groupId>
 					<artifactId>element-connector</artifactId>
-					<version>${californium.version}</version>
 					<classifier>tests</classifier>
 					<type>test-jar</type>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
-		</profile>
-		<profile>
-			<!--
-				this profile downloads licenses used by 3rd-party library
-			-->
-			<id>download-licenses</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<property>
-					<name>downloadLicenses</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>license-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>download-licenses</id>
-								<configuration>
-									<excludedGroups>org.eclipse.californium</excludedGroups>
-									<excludedScopes>system,test</excludedScopes>
-								</configuration>
-								<goals>
-									<goal>download-licenses</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 		<profile>
 			<!-- this profile generate all the needed artifact and signatures needed for releasing on maven central -->
