--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 	<properties>
 		<project.build.javaVersion>1.8</project.build.javaVersion>
 		<assembly.mainClass>org.eclipse.californium.actinium.AcServer</assembly.mainClass>
+		<!-- 
+			this property prevents the Nexus Staging Maven Plugin to
+			deploy this module's artifacts to Maven Central's staging repo
+		 -->
+		<skipStaging>true</skipStaging>
 	</properties>
 
 	<dependencies>
