--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 			<groupId>org.eclipse.californium</groupId>
 			<artifactId>parent</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>2.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>actinium</artifactId>
@@ -169,6 +169,13 @@
 				</executions>
 				<configuration>
 					<mainClass>org.eclipse.californium.actinium.AcServer</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.revapi</groupId>
+				<artifactId>revapi-maven-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
