Skip animal-sniffer and revapi.
Signed-off-by: Achim Kraus <achim.kraus@bosch.io>

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,8 @@
 			deploy this module's artifacts to Maven Central's staging repo
 		 -->
 		<skipStaging>true</skipStaging>
+		<animal.sniffer.skip>true</animal.sniffer.skip>
+		<revapi.skip>true</revapi.skip>
 	</properties>
 
 	<dependencies>
